--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <nav class="same-line">
         <div class="topnav left">
-            <a href="#home">Jason Devers</a>
+            <a href="#home">Sean Mohs</a>
         </div>
         <div class="topnav right">
             <a href="#home">Home</a>
@@ -29,7 +29,7 @@
             <img src="https://media.licdn.com/dms/image/C4E03AQFwxNdQ6iUv3g/profile-displayphoto-shrink_800_800/0/1603834531317?e=2147483647&v=beta&t=HknrB-eU7SJtjnIw0hTMP3dAO5W4f_6gS3VF8cWMeTk" alt="logo" width="200" height="200">  
             <!-- this was the only way I could get the image to show up -->
             <div class="center">
-                <h1>Jason Devers</h1>
+                <h1>Sean Mohs</h1>
                 <h2>Undergraduate Student</h2>
                 <h3>Computer Science</h3>
             </div>
@@ -43,7 +43,7 @@
         <div class="same-line-panel reveal">
 <!-- <img id="logo" src=logo.png> -->
             <div class="panel">
-                <p>My favorite number is 2. Check out what I mean<a href="https://github.com/jsondevers/overflown/blob/main/writing/beauty-of-two/README.md" > here</a> </p>
+                <p>4th year student at the University of Maryland, College Park, pursuing a Bachelor's in Computer Science. Software Engineer Intern at Northrop Grumman for the Summers of 2022 and 2023, and Systems Engineer intern at Textron Systems for the Spring of 2024. Going full-time at Northrop Grumman in 2024 as a Software Engineer. Maintains a Secret clearance.</p>
             </div>
 
         </div>
