--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <!-- <img id="logo" src=logo.png> -->
             <div class="panel">
                 <p>4th year student at the University of Maryland, College Park, pursuing a Bachelor's in Computer Science. Software Engineer Intern at Northrop Grumman for the Summers of 2022 and 2023, and Systems Engineer intern at Textron Systems for the Spring of 2024. Going full-time at Northrop Grumman in 2024 as a Software Engineer. Maintains a Secret clearance.</p>
+                <p>Techincal skills include: Python, C, C#, C++, Groovy, Java, Git, Docker, Jenkins, DevOps, OpenSearch, Bitbucket, VSCode, Jira, Confluence, Gliffy, Linux, VMWare, SonarQube, Nexus Repositories, Eclipse, Subversion, Gitlab, and Unity</p>
             </div>
 
         </div>
