--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
         <div class="same-line-panel reveal">
 <!-- <img id="logo" src=logo.png> -->
             <div class="panel">
-                <p>4th year student at the University of Maryland, College Park, pursuing a Bachelor's in Computer Science. Software Engineer Intern at Northrop Grumman for the Summers of 2022 and 2023, and Systems Engineer intern at Textron Systems for the Spring of 2024. Going full-time at Northrop Grumman in 2024 as a Software Engineer. Maintains a Secret clearance.</p>
-                <p>Techincal skills include: Python, C, C#, C++, Groovy, Java, Git, Docker, Jenkins, DevOps, OpenSearch, Bitbucket, VSCode, Jira, Confluence, Gliffy, Linux, VMWare, SonarQube, Nexus Repositories, Eclipse, Subversion, Gitlab, and Unity</p>
+                <p>4th year student at the University of Maryland, College Park, pursuing a Bachelor's in Computer Science.
+                    Software Engineer Intern at Northrop Grumman for the Summers of 2022 and 2023, and Systems Engineer intern at Textron Systems for the Spring of 2024.
+                    Going full-time at Northrop Grumman in 2024 as a Software Engineer. Maintains a Secret clearance.</p>
+                <p>Techincal skills include: Python, C, C#, C++, Groovy, Java, Git, Docker, Jenkins, DevOps, OpenSearch, Bitbucket,
+                    VSCode, Jira, Confluence, Gliffy, Linux, VMWare, SonarQube, Nexus Repositories, Eclipse, Subversion, Gitlab, and Unity</p>
             </div>
 
         </div>
@@ -54,21 +57,27 @@
             <h1 class="section-header">Projects</h1>
             <div class="row">
                 <div class="column reveal" style="background-color:#A4969B;">
-                    <h2>Parallel Programming Conway's Game of Life</h2>
-                    <p> Designed and optimized parallel algorithms to efficiently distribute the computational workload across 512 processes, resulting in a significant reduction in overall execution time and increased scalability of the application. </p>
+                    <h2>Unity3D Baxter Teleautonomy Research Simulation</h2>
+                    <p>Created a simulated game in Unity for human-robot interaction research and UMCP’s
+                        NMCL laboratory. Designed to induce varying levels of cognitive load via modulating
+                        complexity, tracked using an EEG machine to record brain signaling. Game allows for
+                        creation of custom levels for researchers to develop specific experimental conditions.</p>
                 </div>
                 <div class="column reveal" style="background-color:#BFB5B9;">
-                    <h2>RA Bot</h2>
-                    <p>Designed a bot to interact with my residents via GroupMe while I'm in class.</p>
-                    <p>RA bot is able to remind residents of important events,
-                        check for profanity, help with FAQs, let them know when
-                        there’s chicken-tenders at the dining hall, and play games</p>
+                    <h2>CI/CD Ecosystem Baseline Health Visualization</h2>
+                    <p>Designed and developed an automated visual health monitoring system for Northrop Grumman’s 
+                        Jenkins CI/CD jobs using Python scripting, REST API, Jenkins, and OpenSearch/OpenSearch 
+                        Dashboards. Developed automated packaging and deployment of monitoring system for testing 
+                        parallel to development using Jenkins, Docker, and Python packaging.</p>
+                    <p>Assigned/worked 31 tickets and contributed to 65 via review, submitted 86 Pull Requests that 
+                        were merged to product line repositories, and contributed to 8 product line documentation pages, 
+                        and 10 technical product diagrams. Planned and designed project development using Agile, DevOps, Jira, and Confluence.</p>
                 </div>
                 <div class="column reveal" style="background-color:#D1CACD;">
-                    <h2>Heart Attack Analysis</h2>
-                    <p>Created linear regressions, trained and tested models, then
-                        creating classifiers (Decision Trees, KNN, Random Forest)
-                        that had 85%+ accuracy, and more.</p>
+                    <h2>Monster Hunter Rise Speedrun Data Analysis</h2>
+                    <p>Scraped and parsed online user-submitted video game data for analysis using Python, REST and BeautifulSoup.
+                         Performed data analysis on collected data with Pandas and Seaborn. Used Jupyter/IPython Notebook for development environment.</p>
+                         <p>https://github.com/SeanM20902/seanm20902.github.io</p>
                 </div>
             </div>
         </div>
