github and linkedin

--- a/index.html
+++ b/index.html
@@ -85,20 +85,15 @@
 <!-- Autograder Comment --><!-- Autograder Comment --></body>
 <footer>
     <div class="leftFooter">
-        jdevers1@umd.edu
+        seanmohs20902@gmail.com
     </div>
     <div class="rightFooter">
-        <a href="https://github.com/jsondevers" class="fa fa-github" style="font-size:36px"></a>
+        <a href="https://github.com/SeanM20902" class="fa fa-github" style="font-size:36px"></a>
 
     </div>
     <div class="rightFooterr">
-        <a href="https://www.linkedin.com/in/jsondev/" class="fa fa-linkedin" style="font-size:36px"></a>
+        <a href="https://www.linkedin.com/in/sean-mohs-07b606227/" class="fa fa-linkedin" style="font-size:36px"></a>
 
-    </div>
-    <div class="rightFooterr">
-        <a href="https://www.instagram.com/deversfit/" class="fa fa-instagram" style="font-size:36px"></a>
-
-    </div>
 </footer>
 </footer>
 
