--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     Software Engineer Intern at Northrop Grumman for the Summers of 2022 and 2023, and Systems Engineer intern at Textron Systems for the Spring of 2024.
                     Going full-time at Northrop Grumman in 2024 as a Software Engineer. Maintains a Secret clearance.</p>
                 <p>Techincal skills include: Python, C, C#, C++, Groovy, Java, Git, Docker, Jenkins, DevOps, OpenSearch, Bitbucket,
-                    VSCode, Jira, Confluence, Gliffy, Linux, VMWare, SonarQube, Nexus Repositories, Eclipse, Subversion, Gitlab, and Unity</p>
+                    VSCode, Jira, Confluence, Gliffy, Linux, VMWare, SonarQube, Nexus Repositories, Eclipse, Subversion, Gitlab, and Unity.</p>
             </div>
 
         </div>
@@ -77,7 +77,7 @@
                     <h2>Monster Hunter Rise Speedrun Data Analysis</h2>
                     <p>Scraped and parsed online user-submitted video game data for analysis using Python, REST and BeautifulSoup.
                          Performed data analysis on collected data with Pandas and Seaborn. Used Jupyter/IPython Notebook for development environment.</p>
-                         <p>https://github.com/SeanM20902/seanm20902.github.io</p>
+                         <p><a href="https://github.com/SeanM20902/seanm20902.github.io"> Check it out here.</a></p>
                 </div>
             </div>
         </div>
@@ -93,7 +93,11 @@
     </div>
     <div class="rightFooterr">
         <a href="https://www.linkedin.com/in/sean-mohs-07b606227/" class="fa fa-linkedin" style="font-size:36px"></a>
+    </div>
+    <div class="rightFooterr">
+        <a href="https://www.instagram.com/" class="fa fa-instagram" style="font-size:36px"></a>
 
+    </div>
 </footer>
 </footer>
 
