--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#project">Projects</a>
+            <a href="#skills">Technical Skills</a>
             <!-- <a href="#about">About</a> -->
         </div>
     </nav>
@@ -46,8 +47,6 @@
                 <p>4th year student at the University of Maryland, College Park, pursuing a Bachelor's in Computer Science.
                     Software Engineer Intern at Northrop Grumman for the Summers of 2022 and 2023, and Systems Engineer intern at Textron Systems for the Spring of 2024.
                     Going full-time at Northrop Grumman in 2024 as a Software Engineer. Maintains a Secret clearance.</p>
-                <p>Techincal skills include: Python, C, C#, C++, Groovy, Java, Git, Docker, Jenkins, DevOps, OpenSearch, Bitbucket,
-                    VSCode, Jira, Confluence, Gliffy, Linux, VMWare, SonarQube, Nexus Repositories, Eclipse, Subversion, Gitlab, and Unity.</p>
             </div>
 
         </div>
@@ -80,6 +79,19 @@
                          <p><a href="https://github.com/SeanM20902/seanm20902.github.io"> Check it out here.</a></p>
                 </div>
             </div>
+        </div>
+    </section>
+    <section id="skills">
+        <div class="container">
+            <h1 class="section-header">Technical Skills</h1>
+        </div>
+        <div class="same-line-panel reveal">
+<!-- <img id="logo" src=logo.png> -->
+            <div class="panel">
+                    <p>Techincal skills include: Python, C, C#, C++, Groovy, Java, Git, Docker, Jenkins, DevOps, OpenSearch, Bitbucket,
+                    VSCode, Jira, Confluence, Gliffy, Linux, VMWare, SonarQube, Nexus Repositories, Eclipse, Subversion, Gitlab, and Unity.</p>
+            </div>
+
         </div>
     </section>
 <!-- Autograder Comment --><!-- Autograder Comment --></body>
