--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h2>Monster Hunter Rise Speedrun Data Analysis</h2>
                     <p>Scraped and parsed online user-submitted video game data for analysis using Python, REST and BeautifulSoup.
                          Performed data analysis on collected data with Pandas and Seaborn. Used Jupyter/IPython Notebook for development environment.</p>
-                         <p><a href="https://github.com/SeanM20902/seanm20902.github.io"> Check it out here.</a></p>
+                         <p><a href="https://seanm20902.github.io/"> Check it out here.</a></p>
                 </div>
             </div>
         </div>
@@ -105,6 +105,7 @@
     </div>
     <div class="rightFooterr">
         <a href="https://www.linkedin.com/in/sean-mohs-07b606227/" class="fa fa-linkedin" style="font-size:36px"></a>
+    
     </div>
     <div class="rightFooterr">
         <a href="https://www.instagram.com/" class="fa fa-instagram" style="font-size:36px"></a>
