--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="home">
 
         <div class="same-line-panel">
-
+            <img src="\img\profile-pic.png" alt="Profile Picture">
             <div class="center">
                 <h1>Sean Mohs</h1>
                 <h2>Undergraduate Student</h2>
